--- a/Net Data Source/Net Data Source.vcxproj
+++ b/Net Data Source/Net Data Source.vcxproj
@@ -236,6 +236,7 @@
     <ClInclude Include="include\defs.h" />
     <ClInclude Include="include\HttpData.h" />
     <ClInclude Include="include\DataSource.h" />
+    <ClInclude Include="include\ref.h" />
     <ClInclude Include="include\WininetHttp.h" />
   </ItemGroup>
   <ItemGroup>
