--- a/Net Data Source/Net Data Source.vcxproj.filters
+++ b/Net Data Source/Net Data Source.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="include\CJsonObject.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\ref.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\res.rc">
